# diarization

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agents.md  main.py  prompt_nota_atendimento.txt  pyproject.toml  roadmap_diarizacao_ptbr.md
audio/: .gitkeep
processed/: .gitkeep
scripts/: evaluate.py
src/: audio.py  audio_processing.py  config.py  diarization.py  models.py  rating.py  refinement.py  transcription.py
src/prompts/: atendimento_rating.md
transcription/: .gitkeep
